fix: improve i18n support and page structure
- Reorganize configuration into config/_default/
- Fix multilingual menu and navigation
- Update page URLs for proper i18n routing
- Fix duplicate menu items
- Configure widgets and giscus comments

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,60 +1,2 @@
-baseURL = 'https://Yikai-Liao.github.io/blog/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
-theme = 'stack'
-enableGitInfo = true
-
-defaultContentLanguage = 'zh' # 设置默认语言为中文
-
-[languages]
-  [languages.en]
-    title = 'My Blog'
-    weight = 1
-    languageName = 'English'
-    # contentDir = 'content/en' # Optional: Separate content directories
-  [languages.zh]
-    title = '我的博客'
-    weight = 2
-    languageName = '中文'
-    # contentDir = 'content/zh' # Optional: Separate content directories
-
-[params]
-  mainSections = ["posts"]
-  # Add other params from Ananke theme documentation if needed
-
-  [params.sidebar.avatar]
-    src = "https://pub-3882fdd9f81f44b996a0eb4c32a8c257.r2.dev/black-saber.jpg"
-    local = false
-
-  # Giscus configuration placeholder
-  # You need to enable giscus in your GitHub repository settings first.
-  # See: https://giscus.app/
-  [params.giscus]
-    enable = true # Set to true to enable giscus
-    repo = "Yikai-Liao/blog" # Replace with your repo
-    repoId = "R_kgDOOcmk4Q" # Replace with your repo ID
-    category = "Announcements" # Replace with your discussion category
-    categoryId = "DIC_kwDOOcmk4c4CpR8x" # Replace with your category ID
-    mapping = "pathname" # Or other mapping options like 'url', 'title', 'og:title'
-    strict = "0" # Or "1"
-    reactionsEnabled = "1" # Or "0"
-    emitMetadata = "0" # Or "1"
-    inputPosition = "bottom" # Or "top"
-    theme = "preferred_color_scheme" # Or 'light', 'dark', 'transparent_dark', etc.
-    lang = "zh-CN" # Default language for giscus widget (can be overridden by site language)
-    loading = "lazy" # Optional: Set to 'lazy' to load comments lazily
-
-# Optional: Configure menu items for each language
-# [languages.en.menu]
-#   [[languages.en.menu.main]]
-#     identifier = "about"
-#     name = "About"
-#     url = "/about/"
-#     weight = -110
-#
-# [languages.zh.menu]
-#   [[languages.zh.menu.main]]
-#     identifier = "about"
-#     name = "关于"
-#     url = "/about/"
-#     weight = -110
+# 此配置文件仅作为引导使用，主要配置已移至 config/_default/ 目录
+theme = "stack"
