feat: add custom article footer
- Add last modified time display in article footer
- Keep Giscus lazy loading for better performance
- Override theme template in local layouts instead of modifying theme files

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -70,4 +70,4 @@ emitMetadata = "0"
 inputPosition = "bottom"
 theme = "preferred_color_scheme"
 lang = "zh-CN"
-loading = "lazy"
+loading = "lazy"  # 保持lazy加载
