feat: improve Giscus dark theme support
- Add explicit dark_dimmed theme for dark mode
- Add explicit light theme for light mode
- Remove preferred_color_scheme for better consistency

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -68,5 +68,7 @@ strict = "0"
 reactionsEnabled = "1"
 emitMetadata = "0"
 inputPosition = "bottom"
-theme = "preferred_color_scheme"
+theme = "dark_dimmed"  # 深色主题使用 dark_dimmed
+darkTheme = "dark_dimmed"  # 显式设置深色主题
+lightTheme = "light"  # 显式设置浅色主题
 lang = "zh-CN"
