Modify giscus mapping to 'specific' and update comments partial for shared multilingual discussions

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -63,7 +63,7 @@ repo = "Yikai-Liao/blog"
 repoID = "R_kgDOOcmk4Q"
 category = "Announcements"
 categoryID = "DIC_kwDOOcmk4c4CpR8x"
-mapping = "pathname"
+mapping = "specific"
 strict = "0"
 reactionsEnabled = "1"
 emitMetadata = "0"
